# LotteryInsight

./: .coveragerc  .gitignore  Dockerfile  Dockerfile.cache  Dockerfile.dev  Makefile  Pipfile  README.md  config.ini  docker-compose.db.yml  docker-compose.scheduler.yml  genenv.py  pyproject.toml  setup.py
.devcontainer/: docker-compose.db.dev.yml  docker-compose.scheduler.dev.yml
.github/workflows/: image-publish.yml  python-package.yml
LotteryInsight/: config.py
LotteryInsight/crawlers/: DailyCash.py  Lotto649.py  Superlotto638.py
LotteryInsight/schedulers/: main.py
LotteryInsight/tasks/: brain.py  sent.py
LotteryInsight/tools/: datasets.py  db.py
LotteryInsight/utility/: common.py  date.py
tests/crawler/: test_DailyCash.py  test_Lotto649.py  test_Superlotto638.py
