[tool.poetry]
name = "lotteryinsight"
version = "0.1.0"
description = ""
authors = ["YenChen <yenchen0416@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.19.5"
pandas = "1.1.5"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
loguru = "^0.6.0"
requests = "^2.28.1"
SQLAlchemy = "^1.4.40"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
